# CMakeList.txt : CMake project for assignment2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (assignment2 "assignment2.cpp"  "graph.hpp" "heap.hpp" "djykstra.hpp")

# TODO: Add tests and install targets if needed.
